<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.temple.bitcoinfinalproject.BalanceFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/balance"
        android:layout_below="@+id/displayBalance"
        android:layout_centerHorizontal="true" />

    <Button android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/qr"
        android:id="@+id/scanQRCode"
        android:layout_alignTop="@+id/goButton"
        android:layout_toEndOf="@+id/displayBalance"
        android:layout_marginStart="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blockAddress"
        android:textSize="25sp"
        android:id="@+id/goButton"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/balance"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/displayBalance"
        android:text="@string/balance"
        android:layout_marginTop="97dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/bcAddress"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginBottom="43dp"
        android:layout_above="@+id/balance"
        android:layout_alignParentStart="true" />

</RelativeLayout>
